# Joker-Lottery-Models

./: .bumpversion.cfg  .gitignore  Dockerfile  README.md  pyproject.toml
docker/: entrypoint.sh
src/data/: data.xlsx  ~$data.xlsx
src/joker_lottery_models/: __init__.py  complex_ml_predictors.py  frequency_analysis.py  main.py  markov_analysis.py  monte_carlo_analysis.py  simple_ml_predictors.py  utility.py
tests/: test_joker_lottery_models.py
